fix: not working forwarding of messages
