# src/tyntec/openapi.yaml
@@ -341,14 +341,14 @@ components:
       description: The response after the server has accepted the request
       required:
         - messageId
-        - acceptedAt
+        - timestamp
       properties:
         messageId:
           type: string
           format: uuid
           description: Global Message Id reference
           example: 77185196-664a-43ec-b14a-fe97036c697f
-        acceptedAt:
+        timestamp:
           type: string
           format: date-time
           description: Point in time when the API confirms that the message request was accepted
